feat(talk): intégrer l'assistant de relecture IA (backend et frontend)